# ai-hub

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  SECURITY.md  build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py
app/api/: auth.py  conversation.py  dependencies.py
app/core/: audit.py  conversation_engine.py  duplicate_service.py  hashing.py  llm_client.py  mock_llm.py  similarity.py
app/db/: mongo.py  requests_repo.py  sessions_repo.py
app/models/: request.py  session.py
config/: prompt.yaml
e2e/: test_e2e.py
eval/: README.md  calibrate.py  dataset.py
tests/: conftest.py  test_auth.py  test_config_driven.py  test_conversation_flows.py  test_dedup_quality.py  test_duplicates.py  test_embedding_similarity.py  test_extraction.py  test_llm_client.py  test_logging.py  test_persistence.py  test_real_llm_smoke.py  test_sessions.py
